# ETL_01

./: README.md  etl.py  pipeline.py  pyproject.toml
