[tool.poetry]
name = "etl-01"
version = "0.1.0"
description = ""
authors = ["Márcio Mota <marcio_mota@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.19.2"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
